--- a/base/static/css/app.css
+++ b/base/static/css/app.css
@@ -64,3 +64,59 @@
   text-align: center;
   color: #e6e6e6;
 }
+
+
+
+.modal-wrapper:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.6);
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3;
+}
+.modal-wrapper.closed {
+  display: none;
+}
+
+.modal-1 {
+  position: fixed;
+  top: 50px;
+  left: 0px;
+  right: 0px;
+  margin: 0 auto;
+  display: block;
+  background: #000;
+  border: 2px solid #eee;
+  padding: 50px;
+  width: 600px;
+  max-width: 100%;
+  z-index: 4;
+}
+.modal-1 .modal-close {
+  font-family: "Helvetica",Arial,sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #CCC;
+  display: block;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  text-decoration: none;
+  -webkit-transition: all 0.1s ease-in-out;
+          transition: all 0.1s ease-in-out;
+}
+.modal-1 .modal-close:hover {
+  color: #666;
+}
+
+.modal-content {
+  overflow: hidden;
+}
