--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -82,6 +82,7 @@
   <script src="{% static "assets/vendor/js/lightgallery.min.js" %}"></script>
   <script src="{% static "assets/vendor/js/lightgallery-all.min.js" %}"></script>
   <script src="{% static "assets/vendor/js/theme.js" %}"></script>
+  <script src="{% static "js/main.js" %}"></script>
   {% block js %}{% endblock js %}
 {% endblock %}
 </body>
