--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -5,15 +5,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Share Workplace</title>
+    <title>Startup Life</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Responsive Photography HTML5 Website Template">
-    <meta name="keywords" content="HTML5, CSS3, Bootsrtrap, Responsive, Photography, Portfolio, Template, Theme, Website, Themetorium" />
-    <meta name="author" content="themetorium.net">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="{% static "assets/vendor/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "assets/vendor/css/animsition.min.css" %}">
