--- a/base/templates/_layouts/base.html
+++ b/base/templates/_layouts/base.html
@@ -8,6 +8,7 @@
     <title>Startup Life</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Startup Life - O dia a dia das sturtups">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="{% static "assets/vendor/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "assets/vendor/css/animsition.min.css" %}">
